--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "metalsmith": "2.1.0",
+    "metalsmith-cssnext": "^1.0.0",
     "metalsmith-ignore": "0.1.2",
     "metalsmith-nunjucks": "0.0.1"
   }
