--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "metalsmith": "2.1.0",
     "metalsmith-cssnext": "^1.0.0",
     "metalsmith-ignore": "0.1.2",
-    "metalsmith-nunjucks": "0.0.1"
+    "metalsmith-nunjucks": "0.0.1",
+    "metalsmith-permalinks": "^0.4.0"
   }
 }
