--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "luizbills' metalsmith project boilerplate",
   "main": "index.js",
   "scripts": {
-    "start": "metalsmith"
+    "start": "metalsmith",
+    "ungit": "ungit"
   },
   "keywords": [],
   "author": "Luiz Bills <luizpbills@gmail.com> (http://luizbills.about.me/)",
   "license": "MIT",
   "devDependencies": {
     "metalsmith": "2.1.0",
-    "metalsmith-cssnext": "^1.0.0",
+    "metalsmith-cssnext": "1.0.0",
     "metalsmith-ignore": "0.1.2",
     "metalsmith-nunjucks": "0.0.1",
-    "metalsmith-permalinks": "^0.4.0"
+    "metalsmith-permalinks": "0.4.0",
+    "ungit": "0.9.3"
   }
 }
