--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "metalsmith-cssnext": "1.0.0",
     "metalsmith-ignore": "0.1.2",
     "metalsmith-nunjucks": "0.0.1",
-    "metalsmith-permalinks": "0.4.0",
-    "ungit": "0.9.3"
+    "metalsmith-permalinks": "0.4.0"
   }
 }
