--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "metalsmith-cssnext": "1.0.0",
     "metalsmith-ignore": "0.1.2",
     "metalsmith-nunjucks": "0.0.1",
-    "metalsmith-permalinks": "0.4.0"
+    "metalsmith-permalinks": "0.4.0",
+    "metalsmith-serve": "0.0.6",
+    "metalsmith-watch": "1.0.1"
   }
 }
